<resources>
    <string name="app_name">Phase10_SE2</string>
    <string name="rules"> 2-4 Spieler. Jeder Spieler kann eine Spielfigur auswählen. Jeder Spieler erhält eine Phasen- und Aktionsübersichtskarte und 10 zufällige Spielkarten. 1 verdeckter Ziehkartenstapel und 1 offener Ablagestapel befinden sich in der Mitte des Spielbretts. Jeder Spieler würfelt mit 1 Würfel 1x, höchste Augenzahl startet, bei gleicher Augenzahl mehrere Teilnehmer findet ein Stechen statt. Eine Runde wird nach 2 Minuten automatisch beendet, falls der Spieler dies nicht vorab macht. Ein gezwungender Spielzugabbruch führt dazu, dass der Spieler auf den Stand vor dem aktuellen Zug zurückgesetzt wird. 10 Sekunden vor Spielzugabbruch wird der Spieler mittels Timer darauf aufmerksam gemacht, dass seine Zeit bald vorbei ist.
Spieler, der am Zug ist, würfelt mit dem Würfel und zieht die Felder entsprechend der Augenzahl (Achtung Schummelmöglichkeit). Passend zu der Farbe des Aktionsfeldes, auf dem er sich dann befindet, muss der Spieler die Aufgabe erfüllen. Zieht ein Spieler im Zuge einer Aktionskarte Karten, darf er keine Karte vom Ziehkarten- oder Ablagestapel (wenn bereits Karten abgelegt wurden) ziehen. Am Ende seines Zuges darf ein Spieler nicht mehr als 10 Handkarten haben und muss dementsprechend viele auf den Ablagestapel legen. Ein Spieler versucht die Phase, in der er sich befindet zu beenden, indem er die passenden Karten von der Hand ablegt. Kann der die Phase in seinem Zug nicht beenden, legt er eine Karte auf den Ablagestapel ab und der nächste Spieler beginnt seinen Zug. Beendet der Spieler die Phase, muss er von nun an versuchen, seine restlichen Karten abzulegen, um Minuspunkte zu vermeiden. Dies kann er schaffen, indem er bei einem anderen Spieler, welcher ebenfalls bereits die Phase beendet hat, passende Karten dazulegt, oder bei seiner eigenen Ablage hinzufügt. In jeder Runde muss am Ende eine Karte auf den Ablagestapel gelegt werden. Hat ein Spieler keine Karten mehr auf der Hand, beendet er die Runde für ALLE. Nach Rundenende werden die Zahlenwerte der Karten, die man noch auf der Hand hat, addiert und als Minuspunkte notiert. Gewonnen hat, wer die 10. Phase beendet und nach Rundenende die wenigsten Minuspunkte hat. Haben mehrere Spieler nach Ende der letzten Runde die 10. Phase beendet und gleich viele Minuspunkte, haben beide gewonnen.

Es besteht die Möglichkeit zu Schummeln, indem eine andere Anzahl an Feldern zieht, als gewürfelt wurde. Schummeln indem erneut gewürfelt wird (erneut Gerät schütteln). Ein Schummler kann entlarvt werden, indem der Lichtsensor zugehalten wird (mind 1 Sekunde) und der Entlaver-Button, der durch diese Aktion sichtbar wird, gedrückt wird. Ein entlarvter Schummler wird um 1 Phase zurückgesetzt.</string>
    <string name="username">USERNAME</string>
    <string name="room_name">ROOM NAME</string>
    <string name="pick_your_color">Pick your color:</string>
    <string name="green">GREEN</string>
    <string name="yellow">YELLOW</string>
    <string name="blue">BLUE</string>
    <string name="red">RED</string>
    <string name="create_new_game">CREATE NEW GAME</string>
    <string name="join_room">JOIN ROOM</string>
    <string name="current_players">CURRENT PLAYERS</string>
    <string name="start_game_BTN">START GAME</string>
    <string name="music_by_bensound_com">Music by Bensound.com</string>
    <string name="ncredits_nbaisan_andreas_nhasler_melanie_nlikar_laura_nmarchetti_theresa_nplie_nig_leon">\nCredits: \nBaisan Andreas \nHasler Melanie \nLikar Laura \nMarchetti Theresa \nPließnig Leon</string>
</resources>