<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateGameActivity"
    android:background="@drawable/backgroundbasic">

    <EditText
        android:id="@+id/playerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="64dp"
        android:textSize="20sp"

        android:hint="@string/username"
        android:backgroundTint="@color/white"

        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FAF6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createGameRoomBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:text="@string/create_new_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/createGameRoomBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerName">

        <RadioButton
            android:id="@+id/radioButtonRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:minHeight="48dp"
            android:buttonTint="@color/white"

            android:paddingEnd="20dp"
            android:text="@string/red"
            android:textColor="#FFFFFF"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="285dp" />

        <RadioButton
            android:id="@+id/radioButtonBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:outlineAmbientShadowColor="#FFF8F8"
            android:paddingEnd="20dp"
            android:text="@string/blue"
android:buttonTint="@color/white"
            android:textColor="#F3EFEF"
            android:textColorHint="#FBFBFB"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="285dp" />

        <RadioButton
            android:id="@+id/radioButtonYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingEnd="20dp"
            android:text="@string/yellow"
            android:buttonTint="@color/white"

            android:textColor="#FFF8F8"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="285dp" />

        <RadioButton
            android:id="@+id/radioButtonGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingEnd="20dp"
            android:buttonTint="@color/white"
            android:text="@string/green"
            android:textColor="#FFFFFF"
            android:textColorHint="#F8F8F8"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="285dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/pickColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:text="@string/pick_your_color"
        android:textColor="#F8F8F8"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/roomName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/room_name"
        android:textSize="20sp"

        android:gravity="center"
android:backgroundTint="@color/white"
        android:textColor="#FFFCFC"
        android:textColorHint="#FDFCFC"
        app:layout_constraintBottom_toTopOf="@+id/pickColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerName" />

</androidx.constraintlayout.widget.ConstraintLayout>